Consolidate similar logic